--- a/blog_noticias/index.html
+++ b/blog_noticias/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog de Notícias</title>
 </head>
 <body>
-    Olá mundo!
+    <h1>Olá mundo!</h1>
 </body>
 </html>
