--- a/blog_noticias/index.html
+++ b/blog_noticias/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Responsivo | GN</title>
+    <title>Blog Notícias</title>
     <style>
         :root{
             --color-white: #fff;
@@ -101,7 +101,7 @@
             </svg>
         </button>
         <div class="logo_header">
-            <img src="logo_gn.png" alt="Logo GN" class="img_logo_header">
+            <img src="imagens/logo5.png" alt="Logo" class="img_logo_header">
         </div>
         <div class="navigation_header" id="navigation_header">
             <button onclick="toggleSidebar()" class="btn_icon_header">
@@ -116,7 +116,7 @@
         </div>
     </div>
     <div tabindex="0" class="content" onfocus="closeSidebar()" id="content">
-        <h1>Menu Responsivo - Gustavo Neitzke</h1>
+        <h1>Blog Notícias</h1>
     </div>
 </body>
 <script>
